# gescoice

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
src/core/: CMakeLists.txt  Containers.cpp  Containers.h  IO.cpp  IO.h  Ingredients.cpp  Ingredients.h  Lot.cpp  Lot.h
src/gui/: AddContainer.cpp  AddContainer.h  AddIngredient.cpp  AddIngredient.h  CMakeLists.txt  GuiUtils.cpp  GuiUtils.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SelectContainer.cpp  SelectContainer.h  SelectIngredient.cpp  SelectIngredient.h  SelectIngredient.ui  addcontainer.ui  addingredient.ui  main.cpp  resources.qrc  selectcontainer.ui  selectingredient.ui
test/: CMakeLists.txt  core.cpp
